background change and fake names in json file

--- a/style/main-style.css
+++ b/style/main-style.css
@@ -4,7 +4,8 @@
 }
 
 body{
-    background-image: url("../images/makeTheme.png");
+    background-image: url("../images/bkgImage.png");
+    background-repeat: no-repeat;
 }
 
 #sorting-card{
